--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <name>Releases Nexus Repository</name>
 	      <url>http://3.6.93.170:9980/vani/repository/facebook-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>Snapshot Nexus Repository </name>
 	      <url>http://3.6.93.170:9980/vani/repository/facebook-snapchat/</url>
 	    </snapshotRepository>
 	    
@@ -145,6 +145,11 @@
 					<wtpContextName>maven-web-application</wtpContextName>
 				</configuration>
 			</plugin>
+			<plugin>
+                		<groupId>org.sonarsource.scanner.maven</groupId>
+                		<artifactId>sonar-maven-plugin</artifactId>
+                		<version>4.7.0.2747</version> 
+            		</plugin>
 			
 </plugins>
 	</build>
